--- a/style.css
+++ b/style.css
@@ -541,7 +541,7 @@ footer {
     }
 
     .menu-nav {
-        flex-direction: column;
+        flex-wrap: wrap;
         align-items: center;
     }
 
